--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body, html {
+  height: 100%;
+  min-height: 100%;
+  background-image: url('./img/form.jpg');
+  height: 100%;
+  background-position: center;
+  background-repeat: repeat;
+}
+
+#root {
+  height: 100%;
 }
 
 code {
